--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "https://backend-m9fg.onrender.com",
+  "proxy": "https://backend-yjee.onrender.com",
   "name": "client",
   "version": "0.1.0",
   "private": true,
